# fractal_rndr

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  README_PKG.md  REFERENCE.md  fractal copy.json
.github/workflows/: release.yml
fractals/: ebidxrztkhky.json  ftxuudxauwum.json  gmawxkdrwbkd.json  new_names.txt  pafneiqccmnv.json  qrbcwfunjryj.json  ukhbrprwfewh.json  yjtzeggtvbcf.json
presets/: aacmcg.ron  ajwrkx.ron  ckvjjj.ron  cyggmf.ron  datgdv.json  datgdv.ron  datgdvhdihec.json  dmgtyz.json  dmgtyz.ron  dqqbrm.json  dqqbrm.ron  dvzrjn.ron  ebidxr.json  ebidxr.ron  ecwfwb.ron  efhhgk.json  efhhgk.ron  erbeap.json  erbeap.ron  ffayuk.ron  ffyqby.ron  ftxuudxauwum.json  gmawxkdrwbkd.json  gqwzzr.ron  hdihec.json  hdihec.ron  hptmym.ron  iabppp.ron  idkzrg.json  idkzrg.ron  ipnudq.ron  jtctzj.json  jtctzj.ron  kajan-unmyai.ron  maxjey.ron  megdwu.ron  mzfyje.json  mzfyje.ron  mzfyjeidkzrg.json  new_names.txt  (+28 more)
src/: calc.rs  cli.rs  coloring.rs  complex.rs  complexx.rs  error.rs  fractal.rs  fractal_kind.rs  fractal_names.txt  gpu.rs  gui.rs  main.rs  main_.rs  mat.rs  params.rs  path.rs  presets.rs  progress.rs  rendering.rs  sampling.rs
src/params/: render.rs  render_kind.rs
src/params/render/: animation.rs
