[package]
name = "fractal_renderer"
authors = ["valflrt"]
version = "0.1.6"
license-file = "LICENSE"
edition = "2021"

readme = ["README_PKG.md"]
exclude = ["presets"]

[dependencies]
eframe = "0.31.0"
egui_extras = { version = "0.31.0", features = ["image"] }
fastrand = "2.3.0"
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "jpeg",
] }
rayon = "1.10.0"
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
uni-path = "1.51.1"
wide = "0.7.32"

[features]
default = []
force_f32 = []
