[package]
name = "fractal_rdr"
version = "0.1.6"
description = "A tiny fractal renderer that features several coloring modes, anti-aliasing and a gui."
homepage = "https://github.com/valflrt/fractal_rdr"
authors = ["valflrt"]
edition = "2021"
license-file = "LICENSE"
readme = "README_PKG.md"
exclude = ["/presets/*.png", "/presets/*.mp4"]

[dependencies]
eframe = "0.31.0"
egui_extras = { version = "0.31.0", features = ["image"] }
fastrand = "2.3.0"
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "jpeg",
] }
rayon = "1.10.0"
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
uni-path = "1.51.1"
wide = "0.7.32"

[features]
default = []
force_f32 = []
