[package]
name = "fractal_rndr"
version = "0.2.1"
description = "A tiny fractal renderer that features several coloring modes, anti-aliasing and a gui."
homepage = "https://github.com/valflrt/fractal_rndr"
authors = ["valflrt"]
edition = "2021"
license = "MIT"
readme = "README_PKG.md"
exclude = ["/presets/*.png", "/presets/*.mp4"]

[dependencies]
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
fastrand = "2.3.0"
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "jpeg",
] }
rayon = "1.10.0"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
valargs = "0.1.3"
wide = "0.7.32"

[features]
default = []
force_f32 = []
